Styles/Scrollbar.css
/*for Chromium based browsers*/
:root {
    --mathgray: #23272b;
    --grey: #888888;
  }
::-webkit-scrollbar {
    width: 10px;
}
::-webkit-scrollbar-track {
    background-color: var(--mathgray);
}
::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 5px;
}
    ::-webkit-scrollbar-thumb:hover {
        background: #555;
    }
/*for Firefox based browsers*/
* {     
    scrollbar-width: thin;
    scrollbar-color: var(--lg-gray) var(--mathgray);
  }

